# tiralabra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
Dokumentaatio/: Viikkoraportti_1.md  Viikkoraportti_2.md  Viikkoraportti_3.md  Viikkoraportti_4.md  Viikkoraportti_5.md  Viikkoraportti_6.md  kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
src/: .pylintrc  analysis_tool.py  app.py  clock.py  draw.py  index.py  kruskal.py  menu.py  parse_output.py  random_dfs.py  renderer.py  run_analysis.py
src/algorithms/: aldous_broder.py  kruskal.py  parse_output.py  random_dfs.py  wilson.py
src/interface/: draw.py  eventqueue.py  menu.py  renderer.py
src/tests/: aldous_broder_test.py  kruskal_test.py  parse_output_test.py  random_dfs_test.py  wilson_test.py
src/tools/: adjacency_dict.py  bfs.py  dead_ends.py
